--- a/examples/workflows/deploy-skills.yaml
+++ b/examples/workflows/deploy-skills.yaml
@@ -21,23 +21,11 @@ env:
       with:
         fetch-depth: 0 # Required for change detection
 
-    # Install skr using our own action
-    - uses: andrewhowdencom/skr@main
-        
-    - name: Log in to the Container registry
-      uses: docker/login-action@v3
+    - name: Publish Skills
+      uses: andrewhowdencom/skr@main
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Publish Changed Skills
-      run: |
-        # Login skr to the registry
-        echo "${{ secrets.GITHUB_TOKEN }}" | skr registry login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
-        
-        # Batch publish
-        skr batch publish ./skills \
-          --registry ${{ env.REGISTRY }} \
-          --namespace ${{ env.NAMESPACE }} \
-          --base ${{ github.event.before }}
+        namespace: ${{ env.NAMESPACE }}
+        base: ${{ github.event.before }}
