fix: restore missing jobs key in example workflow

--- a/examples/workflows/deploy-skills.yaml
+++ b/examples/workflows/deploy-skills.yaml
@@ -10,6 +10,7 @@ env:
   REGISTRY: ghcr.io
   NAMESPACE: ${{ github.repository_owner }}
 
+jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
