feat: promote example skills to production and configure publishing
Context: The repository previously maintained a separate 'examples/' directory
containing duplicate or non-functional skill examples. This created maintenance
overhead and potential confusion for users ensuring examples were up to date.
We wanted to establish a "self-hosting" model where the repo's own skills
serve as the canonical examples.

Solution: Promoted the 'builder' and 'skr' skills to the top-level 'skills/'
directory. Configured a GitHub Actions workflow to publish them to GHCR,
serving as a live example of the publishing process. Updated '.skr.yaml' and
'README.md' to document these skills as the primary references. Removed the
legacy 'examples/' directory.

Tradeoffs: merging examples into production skills means the examples are
more complex than a "Hello World", but this ensures they are always correct
and functional.

Changelog-Entry: Promoted 'builder' and 'skr' skills to top-level and configured automated publishing.

--- a/.skr.yaml
+++ b/.skr.yaml
@@ -1,3 +1,16 @@
+# .skr.yaml Configuration File
+# This file serves as the source of truth for the Agent Skills installed in this workspace.
+
 skills:
-    - ghcr.io/andrewhowdencom/skills.git:latest
-    - ghcr.io/andrewhowdencom/skills.go:3fe18f2
+  # Reference to a remote skill (Standard OCI reference)
+  # Format: registry/namespace/repository:tag
+  
+  # Skills for this repository:
+  # These are the skills that are "installed" in this workspace for the agent to use.
+  
+  # A skill provides a set of capabilities and instructions for the agent.
+  # For example, a "builder" skill might teach the agent how to build other skills.
+  - ghcr.io/andrewhowdencom/skills.git:latest
+  
+  # You can also pin skills to specific versions or digests for reproducibility.
+  - ghcr.io/andrewhowdencom/skills.go:3fe18f2
